Domain Transfers: fixes spacing for FAQ section.

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@@ -377,6 +377,7 @@
 			ul {
 				list-style: none;
 				margin-bottom: 48px;
+				margin: 0;
 			}
 		}
 
